--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+
 <!-- Navigation -->
 <nav class="navbar">
     <div class="nav-container">
@@ -19,7 +20,7 @@
             <li><a href="#experience" class="nav-link">Experience</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
-        <button class="mobile-menu-toggle" id="mobileMenuToggle">
+        <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Åpne/Lukk meny">
             <i class="fas fa-bars"></i>
         </button>
     </div>
@@ -73,6 +74,7 @@
                     I believe in maintaining a healthy balance between mind and body.
                 </p>
             </div>
+
             <div class="about-stats">
                 <div class="stat-card">
                     <i class="fas fa-graduation-cap"></i>
@@ -98,79 +100,23 @@
 <section id="skills" class="section section-alt">
     <div class="container">
         <h2 class="section-title">Technical Skills</h2>
+
         <div class="skills-grid">
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fas fa-cube"></i>
-                </div>
-                <h3>Object-Oriented Programming</h3>
-                <p>Strong foundation in OOP principles and design patterns</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fab fa-java"></i>
-                </div>
-                <h3>Java & Python</h3>
-                <p>Core programming languages with strong fundamentals</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fab fa-html5"></i>
-                </div>
-                <h3>Web Development</h3>
-                <p>HTML, CSS, JavaScript with familiarity in React</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fas fa-leaf"></i>
-                </div>
-                <h3>Spring Boot</h3>
-                <p>Familiarity with Spring Boot for backend development</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fas fa-database"></i>
-                </div>
-                <h3>Databases</h3>
-                <p>SQL and NoSQL database design and management</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fas fa-network-wired"></i>
-                </div>
-                <h3>Networks & Info Security</h3>
-                <p>Computer networks and information security principles</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fas fa-project-diagram"></i>
-                </div>
-                <h3>Algorithms & Data Structures</h3>
-                <p>Strong foundation in computational problem-solving</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">
-                    <i class="fas fa-cogs"></i>
-                </div>
-                <h3>Systems Development</h3>
-                <p>Full software development lifecycle experience</p>
-            </div>
+            <div class="skill-card"><div class="skill-icon"><i class="fas fa-cube"></i></div><h3>Object-Oriented Programming</h3><p>Strong foundation in OOP principles and design patterns</p></div>
+            <div class="skill-card"><div class="skill-icon"><i class="fab fa-java"></i></div><h3>Java & Python</h3><p>Core programming languages with strong fundamentals</p></div>
+            <div class="skill-card"><div class="skill-icon"><i class="fab fa-html5"></i></div><h3>Web Development</h3><p>HTML, CSS, JavaScript with familiarity in React</p></div>
+            <div class="skill-card"><div class="skill-icon"><i class="fas fa-leaf"></i></div><h3>Spring Boot</h3><p>Familiarity with Spring Boot for backend development</p></div>
+            <div class="skill-card"><div class="skill-icon"><i class="fas fa-database"></i></div><h3>Databases</h3><p>SQL and NoSQL database design and management</p></div>
+            <div class="skill-card"><div class="skill-icon"><i class="fas fa-network-wired"></i></div><h3>Networks & Info Security</h3><p>Computer networks and information security principles</p></div>
+            <div class="skill-card"><div class="skill-icon"><i class="fas fa-project-diagram"></i></div><h3>Algorithms & Data Structures</h3><p>Strong foundation in computational problem-solving</p></div>
+            <div class="skill-card"><div class="skill-icon"><i class="fas fa-cogs"></i></div><h3>Systems Development</h3><p>Full software development lifecycle experience</p></div>
         </div>
 
-        <!-- Languages Section -->
         <div class="languages-section">
             <h3 class="subsection-title">Languages</h3>
             <div class="languages-grid">
-                <div class="language-card">
-                    <i class="fas fa-globe"></i>
-                    <span>English</span>
-                    <small>Fluent</small>
-                </div>
-                <div class="language-card">
-                    <i class="fas fa-flag"></i>
-                    <span>Norwegian</span>
-                    <small>Fluent</small>
-                </div>
+                <div class="language-card"><i class="fas fa-globe"></i><span>English</span><small>Fluent</small></div>
+                <div class="language-card"><i class="fas fa-flag"></i><span>Norwegian</span><small>Fluent</small></div>
             </div>
         </div>
     </div>
@@ -180,6 +126,7 @@
 <section id="experience" class="section">
     <div class="container">
         <h2 class="section-title">Experience</h2>
+
         <div class="timeline">
             <div class="timeline-item">
                 <div class="timeline-marker"></div>
@@ -187,16 +134,7 @@
                     <div class="timeline-date">February 2025 - Present</div>
                     <h3>Ground Handler</h3>
                     <h4>SAS Ground Handling - Gardermoen Airport</h4>
-                    <p>
-                        Part-time position working in a fast-paced airport environment. Developed strong teamwork,
-                        communication, and problem-solving skills while handling critical operations under time constraints.
-                    </p>
-                    <div class="timeline-skills">
-                        <span>Teamwork</span>
-                        <span>Communication</span>
-                        <span>Problem-solving</span>
-                        <span>Time Management</span>
-                    </div>
+                    <p>Part-time position working in a fast-paced airport environment. Developed teamwork and real-world problem-solving.</p>
                 </div>
             </div>
 
@@ -206,16 +144,7 @@
                     <div class="timeline-date">Present</div>
                     <h3>Teaching Assistant</h3>
                     <h4>OsloMet University</h4>
-                    <p>
-                        Assisting students in HTML & CSS and Technology and Society courses. Helping students understand
-                        complex concepts, debugging code, and fostering a collaborative learning environment.
-                    </p>
-                    <div class="timeline-skills">
-                        <span>HTML & CSS</span>
-                        <span>Teaching</span>
-                        <span>Mentoring</span>
-                        <span>Technical Support</span>
-                    </div>
+                    <p>Helping students understand web development and tech theory.</p>
                 </div>
             </div>
 
@@ -224,17 +153,8 @@
                 <div class="timeline-content">
                     <div class="timeline-date">2024 - Present</div>
                     <h3>Student</h3>
-                    <h4>OsloMet University - Applied Computer Technology</h4>
-                    <p>
-                        Second-year student specializing in Programming. Studying systems development, algorithms,
-                        data structures, web technologies, and information security.
-                    </p>
-                    <div class="timeline-skills">
-                        <span>Programming</span>
-                        <span>Systems Development</span>
-                        <span>Web Technologies</span>
-                        <span>Security</span>
-                    </div>
+                    <h4>OsloMet University</h4>
+                    <p>Applied Computer Technology — Programming specialization.</p>
                 </div>
             </div>
         </div>
@@ -248,14 +168,8 @@
             <h2 class="cool-title">Want to play a game?</h2>
             <p class="cool-description">Check out my interactive projects and experiments</p>
             <div class="game-links">
-                <a href="pages/cyber-snake.html" class="btn btn-cool">
-                    <i class="fas fa-gamepad"></i>
-                    Cyber Snake
-                </a>
-                <a href="pages/game.html" class="btn btn-cool">
-                    <i class="fas fa-chess"></i>
-                    Chess
-                </a>
+                <a href="pages/cyber-snake.html" class="btn btn-cool"><i class="fas fa-gamepad"></i> Cyber Snake</a>
+                <a href="pages/game.html" class="btn btn-cool"><i class="fas fa-chess"></i> Chess</a>
             </div>
         </div>
     </div>
@@ -266,36 +180,14 @@
     <div class="container">
         <h2 class="section-title">Get In Touch</h2>
         <div class="contact-content">
-            <p class="contact-intro">
-                I'm always interested in hearing about new opportunities, collaborations, or just having a chat
-                about technology. Feel free to reach out!
-            </p>
+            <p class="contact-intro">I'm always interested in new opportunities or just chatting about tech.</p>
+
             <div class="contact-cards">
-                <a href="mailto:xamseslb@gmail.com" class="contact-card">
-                    <i class="fas fa-envelope"></i>
-                    <h3>Email</h3>
-                    <p>xamseslb@gmail.com</p>
-                </a>
-                <a href="tel:+4794093804" class="contact-card">
-                    <i class="fas fa-phone"></i>
-                    <h3>Phone</h3>
-                    <p>+47 940 93 804</p>
-                </a>
-                <div class="contact-card">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <h3>Location</h3>
-                    <p>Oslo, Norway</p>
-                </div>
-                <a href="https://www.linkedin.com/in/xamse-sulub-ba9167310" class="contact-card" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-linkedin"></i>
-                    <h3>LinkedIn</h3>
-                    <p>Connect with me</p>
-                </a>
-                <a href="https://www.instagram.com/iamsulub10/" class="contact-card" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-instagram"></i>
-                    <h3>Instagram</h3>
-                    <p>Follow me</p>
-                </a>
+                <a href="mailto:xamseslb@gmail.com" class="contact-card"><i class="fas fa-envelope"></i><h3>Email</h3><p>xamseslb@gmail.com</p></a>
+                <a href="tel:+4794093804" class="contact-card"><i class="fas fa-phone"></i><h3>Phone</h3><p>+47 940 93 804</p></a>
+                <div class="contact-card"><i class="fas fa-map-marker-alt"></i><h3>Location</h3><p>Oslo, Norway</p></div>
+                <a href="https://www.linkedin.com/in/xamse-sulub-ba9167310" class="contact-card" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i><h3>LinkedIn</h3><p>Connect with me</p></a>
+                <a href="https://www.instagram.com/iamsulub10/" class="contact-card" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i><h3>Instagram</h3><p>Follow me</p></a>
             </div>
         </div>
     </div>
