--- a/pages/game.html
+++ b/pages/game.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Cyber Chess - Xamse Portfolio</title>
-    <link rel="stylesheet" href="../css/game.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
+
+    <link rel="stylesheet" href="../css/game.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"/>
 </head>
 <body>
 <div class="game-container">
@@ -31,6 +32,7 @@
                     <div class="timer" id="blackTimer">5:00</div>
                 </div>
             </div>
+
             <div class="turn-indicator" id="turnIndicator">Your Turn</div>
             <div class="game-status" id="gameStatus"></div>
             <div class="material-score" id="materialScore">Score: 0</div>
